[package]
name = "rustfuck"
version = "0.1.0"
edition = "2021"

authors = ["John Harry Kelly <johnharrykelly@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bumpalo = "3.13.0"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
human-panic = "1.1.4"
itertools = "0.10.5"
log = "0.4.18"
tap = "1.0.1"

[features]

trace = []