[package]
name = "rustfuck"
version = "0.1.0"
edition = "2021"

authors = ["John Harry Kelly <johnharrykelly@gmail.com>"]
description = "A blazing fast JIT compiler + interpreter for Brainfuck"
license = "MIT"
repository = "https://github.com/john-h-k/rustfuck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[dependencies]
anyhow = "1.0.71"
bumpalo = "3.13.0"
clap = { version = "4.3.0", features = ["derive"] }
dynasm = "2.0.0"
dynasmrt = "2.0.0"
env_logger = "0.10.0"
human-panic = "1.1.4"
itertools = "0.10.5"
log = "0.4.18"
tap = "1.0.1"

[features]

trace = []
